Updated '/thanks/index.html' via CloudCannon

--- a/thanks/index.html
+++ b/thanks/index.html
@@ -6,7 +6,7 @@ layout: default
     <h2 class="content-block-title 1">Thanks</h2>
     <hr class="content-block-hr 2">
     <div class="container 3">
-      <p>Born and raised in central Alabama, I have a passion for designing and developing for the web and a propensity for consistent branding. I have over five years of web design and development experience in the professional community and am constantly looking for opportunities to work with companies to increase and enhance their digital presence.</p>
+      <p>Your message was successful.</p>
     </div>
   </div>
 </section>
