Updated '/thanks/index.html' via CloudCannon

--- a/thanks/index.html
+++ b/thanks/index.html
@@ -5,8 +5,8 @@ layout: default
   <div class="content-block">
     <h2 class="content-block-title 1">Thanks</h2>
     <hr class="content-block-hr 2">
-    <div class="container 3">
-      <p>Your message was successful.</p>
+    <div class="container 3 text-center">
+      <h3>Your message was successful.</h3>
     </div>
   </div>
 </section>
