Updated '/thanks/index.html' via CloudCannon

--- a/thanks/index.html
+++ b/thanks/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section id="intro" class="home-header" style="background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/forest.jpg);">
+<section id="intro" class="page-content">
   <div class="content-block">
     <h2 class="content-block-title 1">Thanks</h2>
     <div class="container 3 text-center">
