--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 {% include contact-form.html %}
 <section>
   <div class="text-center">
-    <h2 class="content-block-title 1">Let's be friends.</h2>
+    <h2 class="footer-title 1">Let's be friends.</h2>
     <hr class="content-block-hr 2">
     <img class="me 3" src="/images/me.jpg" />
     <ul class="social-links 3">
