Updated '/index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
   {% endfor %}
 </section>
 {% include contact-form.html %}
-<section>
+<section id="friends" class="friends">
   <div class="text-center">
     <h2 class="footer-title 1">Let's be friends.</h2>
     <hr class="content-block-hr 2">
